# img-dup

./: .gitignore  CLI.md  Cargo.toml  GUI.md  README.md
cli/: Cargo.toml  JSON.md
cli/src/: collate.rs  config.rs  dedup.rs  main.rs  output.rs  scan.rs
common/: Cargo.toml
common/src/: compare.rs  img.rs  lib.rs  scan.rs  serialize.rs  threaded.rs
common/src/worker/: mod.rs  unix.rs  win32.rs
gui/: Cargo.toml
gui/src/: errors.rs  running.rs  setup.rs  util.rs
img_dup_cli/: Cargo.toml
img_dup_cli/src/: main.rs
img_dup_gui/: Cargo.toml
img_dup_gui/src/: dialogs.rs  results.rs
img_hash/src/: lib.rs
src/: comp.rs  comp_type.rs  config.rs  dct.rs  hash.rs  hash_type.rs  hash_types.rs  img.rs  lib.rs  main.rs  model.rs  output.rs  par_queue.rs  parse_args.rs  processing.rs  search.rs  serialize.rs  util.rs  work.rs
src/ui/: dialogs.rs  errors.rs  mod.rs  results.rs  running.rs  setup.rs  util.rs
