[package]
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
name = "img-dup"
version = "0.1.0"

[dependencies]
clap = "*"
futures = { path = "../futures-rs/" }
image = "*"
log = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
vec-vp-tree = { version = "0.2.0-alpha.1", default_features = false }

[dependencies.img_hash]
features = ["rust-image"]
# version = "*"
path = "../img_hash/"

[[bin]]
name = "img-dup"
path = "src/bin/img-dup/main.rs"
