[package]
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
name = "img-dup"
version = "0.1.0"

[dependencies]
# callgrind = { path = "../callgrind-rs/", optional = true }
clap = "*"
futures = "0.1.9"
image = "*"
log = "*"
multiqueue = "0.3"
rayon = "0.7"
serde = "*"
serde_derive = "*"
serde_json = "*"
vec-vp-tree = { version = "0.2.0-alpha.1", default_features = false }

[dependencies.img_hash]
features = ["rust-image"]
version = ">=2.0.1, <3.0"

[[bin]]
name = "img-dup"
path = "src/bin/img-dup/main.rs"

[profile.release]
debug = true

