[package]

name = "img-dup-common"
version = "1.0.0"
authors = [ "Austin Bonander <austin.bonander@gmail.com>" ]

[dependencies]
log = "*"
rustc-serialize = "*"
num_cpus = "*"

[dependencies.img_hash]
git = "https://github.com/cybergeek94/img_hash"
features = ["rust-image"]

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"


