[package]

name = "img-dup-common"
version = "1.0.0"
authors = [ "Austin Bonander <austin.bonander@gmail.com>" ]

[dependencies]
log = "*"
image = "*"
rustc-serialize = "*"
num_cpus = "*"

[dependencies.img_hash]
version = "*"
features = ["rust-image"]

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "*"
user32-sys = "*"
kernel32-sys = "*"
