[package]
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
name = "img-dup-common"
version = "1.0.0"

[dependencies]
crossbeam = "0.2.5"
image = "*"
log = "*"
num_cpus = "*"
rustc-serialize = "*"

[dependencies.img_hash]
features = ["rust-image"]
version = "*"

[dependencies.libc]
git = "https://github.com/cybergeek94/libc"

[target]

[target.x86_64-pc-windows-msvc]

[target.x86_64-pc-windows-msvc.dependencies]
kernel32-sys = "*"
user32-sys = "*"
winapi = "*"
